# mandelbrot_rust

./: Cargo.toml  readme.md
.github/workflows/: rust-clippy.yml  test.yml
demo/command_line_app/: main.rs
demo/graphical_app/: main.rs
src/: lib.rs  main.rs  mandelbrot_functions.rs
